fixed banner overspill

--- a/projWebsite/style.css
+++ b/projWebsite/style.css
@@ -599,6 +599,7 @@ transform: scale(0.90) translateY(2px);
     font-size: 16px;
     flex-direction: column;
     font-weight: 300;
+    z-index: 1;
 }
 
 .contactInfoBx .box .text h3 {
